--- a/18_nextjs_p2/start/package.json
+++ b/18_nextjs_p2/start/package.json
@@ -5,10 +5,16 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "start": "next start -p 4020",
+    "lint": "next lint",
+    "export": "next export",
+    "build-export": "next build && next export",
+    "build-start": "next build && next start -p 4020",
+    "json-server": "npx json-server -w ./mock/db.json -p 4030"
   },
   "dependencies": {
+    "axios": "^1.4.0",
+    "json-server": "^0.17.3",
     "next": "12.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0"
